Bug 2498 (CVE-2006-7254) - nscd fd leak (CVE-2006-7254)
Summary: nscd fd leak (CVE-2006-7254)
Status: RESOLVED FIXED
Alias: CVE-2006-7254
Product: glibc
Classification: Unclassified
Component: nscd (show other bugs)
Version: 2.4
: P2 normal
Target Milestone: ---
Assignee: Ulrich Drepper
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-03-31 13:43 UTC by Dirk Mueller
Modified: 2019-04-11 09:52 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
fweimer: security+


Attachments
patch (204 bytes, patch)
2006-03-31 13:44 UTC, Dirk Mueller
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dirk Mueller 2006-03-31 13:43:12 UTC
nscd is leaking the accept() fd under some circumstances
Comment 1 Dirk Mueller 2006-03-31 13:44:56 UTC
Created attachment 945 [details]
patch
Comment 2 Ulrich Drepper 2006-04-01 18:50:19 UTC
I applied a similar patch.