[BZ #2498]

2006-04-01  Ulrich Drepper  <drepper@redhat.com>
	[BZ #2498]
	* nscd/connections.c (main_loop_poll): If the connection cannot be
	accepted because of user-imposed limits close the descriptor.